--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,7 +4,7 @@
 +EditProfiles=(Name="Trigger",CustomResponses=((Channel=Projectile, Response=ECR_Ignore)))
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Levels/Level_1.Level_1
+EditorStartupMap=/Game/Levels/MainMenuMap.MainMenuMap
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=True
